--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Om oss sektion -->
     <section id="bageriet" class="section about-section">
         <h2>Copain Bageri</h2>
-        <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. På helgerna hittar du oss hos våra kompisar på <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1, där vi säljer våra bröd och bakverk. Vill du beställa? Det går fint – du hittar mer information <a href="#forbestall">längre ner</a> på sidan.
+        <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. På helgerna hittar du oss hos våra kompisar på <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1, där vi säljer våra bröd och bakverk. Vill du förbeställa? Det går fint – du hittar mer information <a href="#forbestall">längre ner</a> på sidan.
             <br><br>Vi bakar allt med omsorg, tid och riktigt bra råvaror. Vårt mjöl är ekologiskt och våra bröd jäser med surdeg, precis som vi tycker att bröd ska få göra – långsamt och naturligt.
             <br><br>Bilderna här på sidan har vår kompis <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a> tagit. Han har fångat Copain så som vi själva ser det – enkelt, varmt och med kärlek till hantverket. 
         </p>
