--- a/index_new.html
+++ b/index_new.html
@@ -34,7 +34,7 @@
             <br><br>Vi bakar allt med omsorg, tid och riktigt bra råvaror. Vårt mjöl är ekologiskt och våra bröd jäser med surdeg, precis som vi tycker att bröd ska få göra – långsamt och naturligt.
             <br><br>Bilderna här på sidan har vår kompis <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a> tagit. Han har fångat Copain så som vi själva ser det – enkelt, varmt och med kärlek till hantverket. 
         </p>
-        <img src="Karta_Lillkullegatan.png" alt="Lillkullegatan" style="display: block; margin: 0 auto;">
+        <img src="Karta_Lillkullegatan.png" alt="Lillkullegatan" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     </section>
 
     <!-- Divider -->
