--- a/index_new.html
+++ b/index_new.html
@@ -38,10 +38,10 @@
     </section>
 
     <!-- Divider -->
-    <hr class="section-divider">
+    <!-- <hr class="section-divider"> -->
 
     <!-- Sortiment sektion -->
-    <section id="sortiment" class="zigzag-section">
+    <!-- <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
             <img src="pastries.jpg" alt="Vårt färska sortiment" />
         </div>
@@ -56,13 +56,13 @@
                 • Chocolate Chip Cookies och Chokladbiskvier
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Divider -->
-    <hr class="section-divider">
+    <!-- <hr class="section-divider"> -->
 
     <!-- Förbeställ sektion -->
-    <section id="forbestall" class="zigzag-section reverse">
+    <!-- <section id="forbestall" class="zigzag-section reverse">
         <div class="zigzag-img">
             <img src="paketering.jpg" alt="Förbeställ dina favoriter" />
         </div>
@@ -70,7 +70,7 @@
             <h2>Förbeställ</h2>
             <p>Vi tar gärna emot förbeställningar! Kontakta oss via ett direktmeddelande på <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> eller ett mail till <a href="mailto:copain@copainbageri.se">copain@copainbageri.se</a> så löser vi det.</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Divider
     <hr class="section-divider">
@@ -96,10 +96,10 @@
     <!-- Footer -->
     <footer>
         <div class="contact-info">
-            <div class="contact-item">
+            <!-- <div class="contact-item">
                 <h4>Adress</h4>
                 <p>Sankt Sigfrids Plan 7<br>412 66 Göteborg</p>
-            </div>
+            </div> -->
             <div class="contact-item">
                 <h4>Telefon</h4>
                 <p>0702-991 709</p>
