--- a/index_new.html
+++ b/index_new.html
@@ -24,6 +24,7 @@
     <!-- Hero bild -->
     <section class="hero-picture">
         <img src="surdegsbrod.jpg" alt="Copain Bageri Hero" class="hero-img">
+        <p class="photo-credit">Foto: Joakim Blomquist</p>
     </section>
 
     <!-- Om oss sektion -->
