--- a/index_new.html
+++ b/index_new.html
@@ -31,10 +31,7 @@
     <section id="bageriet" class="section about-section">
         <h2>Copain Ateljé & Bageri</h2>
         <!-- <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. På helgerna hittar du oss hos våra kompisar på <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1, där vi säljer våra bröd och bakverk. Vill du förbeställa? Det går fint – du hittar mer information <a href="#forbestall">längre ner</a> på sidan. -->
-        <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. <br><br><b>Vi håller för närvarande på att omlokalisera oss och våra fina ugnar till ny bagerilokal - följ oss gärna på <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> så håller vi er uppdaterade kring nästa etapp för Copain Bageri!</b> 
-            <br><br>Vi bakar allt med omsorg, tid och riktigt bra råvaror. Vårt mjöl är ekologiskt och våra bröd jäser med surdeg, precis som vi tycker att bröd ska få göra – långsamt och naturligt.
-            <br><br>Bilderna här på sidan har vår kompis <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a> tagit. Han har fångat Copain så som vi själva ser det – enkelt, varmt och med kärlek till hantverket. 
-        </p>
+        <p>Vi har spännande nyheter – Copain Ateljé & Bageri flyttar till Lillkullegatan 24! Den nya lokalen ger oss plats att växa, skapa och förverkliga alla idéer vi drömt om under lång tid.<br><br>Under tiden som vi förbereder den nya platsen kan ni följa vår resa på Instagram och Facebook. Vi planerar att öppna någon gång i mars, och fram till dess kommer vi att dela små glimtar av vad som är på gång och våra idéer för framtiden.<br><br>Lokalen har en särskild historia – här har det bedrivits bageriverksamhet från 1940-talet fram till 1967. Att återuppliva denna tradition med fokus på lokal förankring och hantverk känns både fint och inspirerande.<br><br>Vi ser fram emot att snart välkomna er till vår nya plats och fortsätta resan tillsammans.<br><br>Karin & Magnus, Copain</p>
         <img src="Karta_Lillkullegatan.png" alt="Lillkullegatan" class="map-image">
     </section>
 
