--- a/index.html
+++ b/index.html
@@ -14,33 +14,32 @@
         <div class="logo">
             <img src="copain_bageri_logo_transparent_tryck.PNG" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
-        <nav>
+        <!-- <nav>
             <a href="#bageriet">Bageriet</a>
             <a href="#sortiment">Sortiment</a>
             <a href="#forbestall">Förbeställ</a>
-        </nav>
+        </nav> -->
     </header>
 
     <!-- Hero bild -->
     <section class="hero-picture">
         <img src="surdegsbrod.jpg" alt="Copain Bageri Hero" class="hero-img">
+        <p class="photo-credit">Foto: Joakim Blomquist</p>
     </section>
 
     <!-- Om oss sektion -->
     <section id="bageriet" class="section about-section">
-        <h2>Copain Bageri</h2>
+        <h2>Copain Ateljé & Bageri</h2>
         <!-- <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. På helgerna hittar du oss hos våra kompisar på <a href="https://www.instagram.com/grytetgbg/" target="_blank">Grytet</a>  på Bögatan 1, där vi säljer våra bröd och bakverk. Vill du förbeställa? Det går fint – du hittar mer information <a href="#forbestall">längre ner</a> på sidan. -->
-        <p>Vi är Copain Bageri – ett litet bageri med stort hjärta, mitt vid Sankt Sigfrids Plan i Örgryte. <br><br><b>Vi håller för närvarande på att omlokalisera oss och våra fina ugnar till ny bagerilokal - följ oss gärna på <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> så håller vi er uppdaterade kring nästa etapp för Copain Bageri!</b> 
-            <br><br>Vi bakar allt med omsorg, tid och riktigt bra råvaror. Vårt mjöl är ekologiskt och våra bröd jäser med surdeg, precis som vi tycker att bröd ska få göra – långsamt och naturligt.
-            <br><br>Bilderna här på sidan har vår kompis <a href="https://www.instagram.com/joakimblomquistphotography/" target="_blank">Joakim Blomquist</a> tagit. Han har fångat Copain så som vi själva ser det – enkelt, varmt och med kärlek till hantverket. 
-        </p>
+        <p>Vi har spännande nyheter – Copain Ateljé & Bageri flyttar till Lillkullegatan! Den nya lokalen ger oss plats att växa, skapa och förverkliga alla idéer vi drömt om under lång tid.<br><br>Under tiden som vi förbereder den nya platsen kan ni följa vår resa på <a href="https://instagram.com/copainbageri" target="_blank">Instagram</a> och <a href="https://copainbageri.se/facebook" target="_blank">Facebook</a>. Vi planerar att öppna någon gång i mars, och fram till dess kommer vi att dela små glimtar av vad som är på gång och våra idéer för framtiden.<br><br>Lokalen har en särskild historia – här har det bedrivits bageriverksamhet från 1940-talet fram till 1967. Att återuppliva denna tradition med fokus på lokal förankring och hantverk känns både fint och inspirerande.<br><br>Vi ser fram emot att snart välkomna er till vår nya plats och fortsätta resan tillsammans.<br><br><b>Karin & Magnus, Copain</b></p>
+        <img src="Karta_Lillkullegatan.png" alt="Lillkullegatan" class="map-image">
     </section>
 
     <!-- Divider -->
-    <hr class="section-divider">
+    <!-- <hr class="section-divider"> -->
 
     <!-- Sortiment sektion -->
-    <section id="sortiment" class="zigzag-section">
+    <!-- <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
             <img src="pastries.jpg" alt="Vårt färska sortiment" />
         </div>
@@ -55,13 +54,13 @@
                 • Chocolate Chip Cookies och Chokladbiskvier
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Divider -->
-    <hr class="section-divider">
+    <!-- <hr class="section-divider"> -->
 
     <!-- Förbeställ sektion -->
-    <section id="forbestall" class="zigzag-section reverse">
+    <!-- <section id="forbestall" class="zigzag-section reverse">
         <div class="zigzag-img">
             <img src="paketering.jpg" alt="Förbeställ dina favoriter" />
         </div>
@@ -69,7 +68,7 @@
             <h2>Förbeställ</h2>
             <p>Vi tar gärna emot förbeställningar! Kontakta oss via ett direktmeddelande på <a href="https://www.instagram.com/copainbageri/" target="_blank">Instagram</a> eller ett mail till <a href="mailto:copain@copainbageri.se">copain@copainbageri.se</a> så löser vi det.</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Divider
     <hr class="section-divider">
@@ -95,10 +94,10 @@
     <!-- Footer -->
     <footer>
         <div class="contact-info">
-            <div class="contact-item">
+            <!-- <div class="contact-item">
                 <h4>Adress</h4>
                 <p>Sankt Sigfrids Plan 7<br>412 66 Göteborg</p>
-            </div>
+            </div> -->
             <div class="contact-item">
                 <h4>Telefon</h4>
                 <p>0702-991 709</p>
